# knowledge_decoupling

./: .gitignore  config_venv.md  main.py  pyproject.toml  requirements.txt  test.py  transform_eval_data.py
bak/generate_nonce/: generate_nonce_ext_test.sh  generate_nonce_smolLM2.sh  generate_nonce_smolLM2_long.sh  generate_nonce_smolLM2_long_part.sh  generate_nonce_smolLM2_part.sh
bak/preprocess_data/: preprocess_dataset_10k.sh
bak/sft/: sft_gpt2_hf_squad_ans.sh
bak/simplify_data/: simplify.sh  simplify_part.sh
bak/tokenize/: tokenize_and_slice_1024.sh  tokenize_and_slice_smolLM2_1024_long.sh  tokenize_and_slice_smolLM2_1024_mn3.sh
bak/tools/: balance_evaluate_data.py  extract_samples.py  mix_wiki_nonce.py  sub_wiki.py
config/: train.yaml
config/core_data/: default.yaml
config/drop_layers/: default.yaml  local.yaml  qwen_sml_20B_nonce.yaml  random.yaml  test.yaml
config/eval_tasks/: commonsense_qa_norm.yaml
config/train/: Llama3.2_1B-l4-nonce.yaml  Llama3.2_1B-l8-nonce.yaml  Llama3.2_1B-nonce.yaml  Llama3.2_1B-sml.yaml  SmolLM2-135M-nonce.yaml  SmolLM2-135M-sml.yaml  SmolLM2_135M-l15-nonce.yaml  SmolLM2_135M-l7-nonce.yaml  SmolLM2_135M-nonce.yaml  default.yaml  gpt2-l3-nonce.yaml  gpt2-l6-nonce.yaml  gpt2-nonce.yaml  gpt2-sml.yaml  qwen_sml_20B.yaml  qwen_sml_20B_nonce.yaml  sft_train.yaml  test.yaml
jobs/: evaluate.sh  evaluate_b.sh  evaluate_c.sh  mix_wiki_nonce.sh  sub_wiki.sh
jobs/evaluate/: job_evaluate_on_generation_0shot_c.sh  job_evaluate_on_generation_0shots_c.sh  job_evaluate_on_generation_3shot_c.sh  job_evaluate_on_generation_3shots_c.sh  job_evaluate_on_options_0shot_c.sh  job_evaluate_on_options_0shots_c.sh  job_evaluate_on_options_3shot_c.sh  job_evaluate_on_options_3shots_c.sh  sub_jobs.sh  subjobs.sh
jobs/generate_nonce/: job_generate_nonce_0.sh  job_generate_nonce_10.sh  job_generate_nonce_1500k_2000k.sh  job_generate_nonce_2500k_3000k.sh  job_generate_nonce_3.sh  job_generate_nonce_9.sh  job_generate_nonce_wikitext_full.sh
jobs/preprocess_data/: job_preprocess_data_10k.sh  job_preprocess_data_10m.sh  job_preprocess_dataset_full.sh
jobs/sft/: job_sft_gpt2_ext_train-mix.sh  job_sft_gpt2_nonce_sent_c.sh  job_sft_gpt2_sml_c.sh  job_sft_gpt2_sml_ext_train-mix.sh  job_sft_gpt_c.sh  job_sft_gpt_hf_c.sh  job_sft_gpt_random_c.sh  job_sft_nonce_long.sh  job_sft_nonce_sent.sh  job_sft_ox3000_c.sh  job_sft_qwen_c.sh  job_sft_qwen_mix_c.sh  job_sft_qwen_squad_c.sh  job_sft_sml_b.sh  job_sft_sml_c.sh  job_sft_sml_mix_c.sh  job_sft_sml_squad_c.sh  sub_jobs.sh
pyproject/: pyproject.toml.bak
scripts/: agreement_evaluation.sh  evaluate.sh  evaluate_0shot_on_option.sh  evaluate_0shots_on_generation.sh  evaluate_3shots_on_generation.sh  evaluate_3shots_on_option.sh  evaluate_squad.sh  evaluate_squad_ctxt.sh  evaluatie.sh  generate_nonce_data.sh  generate_nonce_data_1000k.sh  generate_nonce_data_1000k_1500k.sh  generate_nonce_data_100k.sh  generate_nonce_data_100k_200k.sh  generate_nonce_data_10k.sh  generate_nonce_data_1500k_2000k.sh  generate_nonce_data_2000k_2500k.sh  generate_nonce_data_200k_300k.sh  generate_nonce_data_300k_400k.sh  generate_nonce_data_400k_500k.sh  generate_nonce_data_500k.sh  generate_nonce_data_50k.sh  generate_nonce_test.sh  generate_nonce_wikimedia.sh  generate_nonce_wikimedia.temp.sh  generate_qa_data.sh  merge_data.sh  merge_nonce_vocab.sh  mix_wiki_nonce.sh  preprocess_dataset.sh  preprocess_dataset_1000k.sh  preprocess_dataset_100k.sh  preprocess_dataset_10k.sh  preprocess_dataset_full.sh  print_evaluation.sh  sub_wiki.sh  tokenize_and_slice_data.sh  tokenize_and_slice_data_1024.sh  tokenize_and_slice_data_128.sh  tokenize_and_slice_nonce_1024.sh  (+25 more)
scripts/eval/: lib.py  (+17 more)
src/: agreement_evaluation.py  evaluate.py  evaluate_1118.py  evaluate_batch.py  evaluate_test.py  generate_agreement_evaluate_data.py  generate_evaluate_data.py  generate_nonce_data.py  generate_nonce_data_dev.py  generate_nonce_data_long.py  generate_nonce_data_long_test.py  generate_qa_data.py  mcq_finetune.py  mcq_finetuning.py  merge_dataset.py  merge_nonce_vocab.py  preprocess_dataset.py  simplify.test.py  simplify_sentence.py  test.py  tokenize_and_slice_data.py  tokenize_data.py  train.py  train_speedup.py  train_test.py  train_trunc.py
sub_jobs/: job_agreement_evaluation.sh  job_generate_nonce.sh  job_generate_nonce_1.sh  job_generate_nonce_1000k.sh  job_generate_nonce_1000k_1500k.sh  job_generate_nonce_100k.sh  job_generate_nonce_100k_200k.sh  job_generate_nonce_10k.sh  job_generate_nonce_2.sh  job_generate_nonce_2000k_2500k.sh  job_generate_nonce_200k_300k.sh  job_generate_nonce_300k_400k.sh  job_generate_nonce_4.sh  job_generate_nonce_400k_500k.sh  job_generate_nonce_500k.sh  job_generate_nonce_500k_1000k.sh  job_generate_nonce_50k.sh  job_generate_nonce_6.sh  job_generate_nonce_8.sh  job_generate_nonce_test.sh  job_merge_data.sh  job_preprocess_data_1000k.sh  job_preprocess_data_100k.sh  job_preprocess_data_10k.sh  job_preprocess_dataset_full.sh  job_tokenize_and_slice_data.sh  job_tokenize_and_slice_data_128.sh  job_tokenize_and_slice_data_512.sh  job_tokenize_data.sh  job_train_gpt_large_on_nonce.sh  job_train_gpt_large_on_nonce_ep3.sh  job_train_gpt_large_on_nonce_ep6.sh  job_train_gpt_large_on_wikimedia_full.sh  job_train_gpt_large_on_wikitext.sh  job_train_gpt_medium_on_nonce.sh  job_train_gpt_medium_on_wikitext.sh  job_train_gpt_medium_on_wikitext_ep3.sh  job_train_gpt_mini_on_nonce.sh  job_train_gpt_mini_on_nonce_ep3.sh  job_train_gpt_mini_on_wikitext.sh  (+11 more)
(+917 files in other folders)
