[project]
requires-python = "==3.11.*"
name = "knowledge-decoupling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "en-core-web-sm",
    "hydra-core>=1.3.2",
    "lemminflect>=0.2.3",
    "lm-eval[hf]>=0.4.12",
    "lmdb>=2.2.0",
    "ninja>=1.13.0",
    "nltk>=3.9.4",
    "omegaconf>=2.3.0",
    "spacy>=3.8.14",
    "torch==2.10.0",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
